# pomodoro-timer

./: Cargo.toml  build.rs  bundle_mac.sh  generate_icon.py  install.ps1  tray_helper.ps1  tray_helper.swift
src/: main.rs
