[package]
name = "focus-flow"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.34"
eframe = "0.34"
rodio = { version = "0.20", default-features = false, features = ["flac", "vorbis", "wav", "mp3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
notify-rust = "4"
mac-notification-sys = "0.6"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
